Fix grading spinner colour on dark mode

--- a/resources/submission.scss
+++ b/resources/submission.scss
@@ -54,6 +54,10 @@
         .score {
             font-size: 1.3em;
             color: #000;
+
+            .grading-spinner {
+                color: $color_primary100;
+            }
         }
     }
 
